--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                 </label>
               </div>
               <div class="row career">
-                <div class="cv-item">
-                  <div class="cv-head volunteer"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">seit Oktober 2022</div></div>
+                <div class="cv-item volunteer" data-type="volunteer">
+                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
                   <p></p>
                   <i>Fakultätsrat der Fakultät Wirtschaftswissenschaften; <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften</i>
