pdate social links

--- a/links/index.html
+++ b/links/index.html
@@ -56,8 +56,8 @@
         </div>
 
         <div id="privatelinks">
-            <a class="link" href="https://www.instagram.com/dominik.dhr"><i class="fab fa-instagram fa-2x"></i><label>Instagram</label><div></div></a>
-            <a class="link" href="https://www.facebook.com/dominikhr00"><i class="fab fa-facebook fa-2x"></i><label>Facebook</label><div></div></a>
+            <a class="link" href="https://www.instagram.com/hr.dominik"><i class="fab fa-instagram fa-2x"></i><label>Instagram</label><div></div></a>
+            <a class="link" href="https://www.facebook.com/hhr.dominik"><i class="fab fa-facebook fa-2x"></i><label>Facebook</label><div></div></a>
             <a class="link" href="https://www.snapchat.com/add/hrdominik"><i class="fab fa-snapchat fa-2x"></i><label>Snapchat</label><div></div></a>
             <br />
             <a class="link" id="discord"><i class="fab fa-discord fa-2x"></i><label></label><div></div></a>
