--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -56,6 +56,10 @@
             <div class="row justify-content-around align-self-center mt-3 px-5 social-icons">
               <span><i class="fa fa-map-marker fa-lg"></i> Paderborn</span>
             </div>
+          </div>
+          <div class="menu-footer">
+            <a href="./impressum.html">Impressum</a>
+            <a href="./datenschutzerklaerung.html">Datenschutzerklärung</a>
           </div>
         </div>
 
