--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <nav class="menu-nav" role="navigation">
                 <ul>
                   <li><a href="#about-me">Über mich</a></li>
-                  <li><a href="#skills">Fertigkeiten & Fähigkeiten</a></li>
+                  <li><a class="linebreak" href="#skills">Fertigkeiten & Fähigkeiten</a></li>
                   <li><a href="#cv">Erfahrung</a></li>
                   <li><a href="#contact">Kontakt</a></li>
                 </ul>
