non-mobile footer

--- a/index.html
+++ b/index.html
@@ -315,6 +315,16 @@
               </div>
             </div>
           </section>
+          <div class="container mobile-only">
+            <div class="row">
+              <div class="col">
+                <div class="footer">
+                  <a href="./impressum.html">Impressum</a>
+                  <a href="./datenschutzerklaerung.html">Datenschutzerklärung</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
