--- a/datenschutzerklaerung.html
+++ b/datenschutzerklaerung.html
@@ -33,7 +33,7 @@
                             <h2>Datenschutzerklärung</h2>
                             <div class="line-dec"></div>
                             <div class="link-button">
-                            <a href="/"> &laquo; Zurück zu Homepage</a>
+                            <a href="/"> &laquo; Zurück zur Homepage</a>
                             </div> 
                           </div>
                         </div>
