--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="menu col-sm-3">
           <div class="menu-content">
             <div class="row justify-content-center align-self-center image-round">
-              <a href=""><img src="./DHR_squared.png" alt="" /></a>
+              <a href=""><img src="./DHR_squared.png" alt="" style="width: 100%;" /></a>
             </div>
             <div class="row justify-content-center align-self-center mt-3">
               <h4>Dominik Höhr</h4><div class="w-100"></div>
