--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <img style="width: 315px;" src="./DHR_LI.png" alt="" />
+                  <img src="./DHR_LI.png" width="100%" alt="" />
                 </div>
                 <div class="col-md-6 d-flex align-content-between flex-wrap">
                   <div class="row">
