--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="de">
   <head>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
     <script src="assets/js/cookies.js"></script>
     
@@ -34,7 +35,7 @@
             <div class="row justify-content-center align-self-center image-round">
               <a href=""><img src="./DHR_squared.png" alt="" style="width: 100%;" /></a>
             </div>
-            <div class="row justify-content-center align-self-center mt-3">
+            <div class="row justify-content-center align-self-center text-center mt-3">
               <h4>Dominik Höhr</h4><div class="w-100"></div>
               <span>Student</span>
             </div>
@@ -48,18 +49,18 @@
                 </ul>
               </nav>
             </div>
-            <div class="row justify-content-around align-self-center mt-5 px-5 social-icons">
-              <a href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a href="https://github.com/hrdominik"><i class="fab fa-github fa-lg"></i></a>
-              <a href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope fa-lg"></i></a>
+            <div class="row justify-content-around align-self-center mt-5 px-3 social-icons">
+              <a class="col-sm text-center" href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a class="col-sm text-center" href="https://github.com/hrdominik"><i class="fab fa-github fa-lg"></i></a>
+              <a class="col-sm text-center" href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope fa-lg"></i></a>
             </div>
-            <div class="row justify-content-around align-self-center mt-3 px-5 social-icons">
-              <span><i class="fa fa-map-marker fa-lg"></i> Paderborn</span>
+            <div class="row justify-content-around align-self-center mt-3 social-icons">
+              <span class="col-sm text-center"><i class="fa fa-map-marker fa-lg"></i> Paderborn</span>
             </div>
           </div>
-          <div class="menu-footer">
-            <a href="./impressum.html">Impressum</a>
-            <a href="./datenschutzerklaerung.html">Datenschutzerklärung</a>
+          <div class="row menu-footer">
+            <a class="col" href="./impressum.html">Impressum</a>
+            <a class="col" href="./datenschutzerklaerung.html">Datenschutzerklärung</a>
           </div>
         </div>
 
@@ -199,20 +200,20 @@
                   <p>Ich suche stetig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden, zu erweitern und Erfahrungen in der Praxis zu sammeln.</p>
                 </div>
               </div>
-              <div class="row cv-isotope-selector">
-                <label>
+              <div class="row px-5 cv-isotope-selector">
+                <label class="col text-center">
                   <input type="radio" data-type="*" checked name="cv-isotope-selector" onclick="filterCV('*')">
                   <span>Alle</span>
                 </label>
-                <label>
+                <label class="col text-center">
                   <input type="radio" data-type="work" name="cv-isotope-selector" onclick="filterCV('work')">
                   <span>Arbeit</span>
                 </label>
-                <label>
+                <label class="col text-center">
                   <input type="radio" data-type="graduation" name="cv-isotope-selector" onclick="filterCV('graduation')">
                   <span>Ausbildung</span>
                 </label>
-                <label>
+                <label class="col text-center">
                   <input type="radio" data-type="volunteer" name="cv-isotope-selector" onclick="filterCV('volunteer')">
                   <span>Ehrenamt</span>
                 </label>
