--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           <div class="menu-content">
             <div class="row justify-content-center align-self-center image-round">
               <a class="d-flex justify-content-around align-self-center" href=""><img src="./DHR_squared.png" alt="" style="width: 50%;" /></a>
-            </div>
-            <div class="row justify-content-center align-self-center text-center mt-3">
-              <h4>Dominik Höhr</h4><div class="w-100"></div>
-              <span>Student</span>
+              <div class="text-center mt-3">
+                <h4>Dominik Höhr</h4>
+                <span>Student</span>
+              </div>
             </div>
             <div class="mt-3 w-100 text-center">
               <nav class="menu-nav" role="navigation">
@@ -49,13 +49,15 @@
                 </ul>
               </nav>
             </div>
-            <div class="row justify-content-around align-self-center px-3 social-icons">
-              <a class="col-sm text-center" href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin fa-lg"></i></a>
-              <a class="col-sm text-center" href="https://github.com/hrdominik"><i class="fab fa-github fa-lg"></i></a>
-              <a class="col-sm text-center" href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope fa-lg"></i></a>
-            </div>
             <div class="row justify-content-around align-self-center social-icons">
-              <span class="col-sm text-center"><i class="fa fa-map-marker fa-lg"></i> Paderborn</span>
+              <div class="row justify-content-around align-self-center px-3 social-icons">
+                <a class="col-sm text-center" href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin fa-lg"></i></a>
+                <a class="col-sm text-center" href="https://github.com/hrdominik"><i class="fab fa-github fa-lg"></i></a>
+                <a class="col-sm text-center" href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope fa-lg"></i></a>
+              </div>
+              <div class="row justify-content-around align-self-center social-icons">
+                <span class="col-sm text-center"><i class="fa fa-map-marker fa-lg"></i> Paderborn</span>
+              </div>
             </div>
             <div class="row justify-content-around align-self-center mt-3">
               <a class="col" href="./impressum.html">Impressum</a>
