--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <span class="col-sm text-center"><i class="fa fa-map-marker fa-lg"></i> Paderborn</span>
               </div>
             </div>
-            <div class="row justify-content-around align-self-center mt-3 leagl">
+            <div class="row justify-content-around align-self-center mt-3 legal">
               <a class="col" href="./impressum.html">Impressum</a>
               <a class="col" href="./datenschutzerklaerung.html">Datenschutzerklärung</a>
             </div>
