--- a/links/index.html
+++ b/links/index.html
@@ -16,7 +16,7 @@
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="../assets/css/fontawesome.min.css" />
     <link rel="stylesheet" href="../assets/css/brands.min.css" />
-    <link rel="stylesheet" href="../assets/css/regular.min.css" />
+    <!-- <link rel="stylesheet" href="../assets/css/regular.min.css" /> -->
     <link rel="stylesheet" href="../assets/css/solid.min.css" />
 
     <link rel="stylesheet" href="../assets/css/style.css" />
