update and improe cv

--- a/index.html
+++ b/index.html
@@ -219,22 +219,28 @@
                 </label>
               </div>
               <div class="row career">
-                <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
-                  <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
-                  <p></p>
-                  <i>Fakultätsrat der Fakultät Wirtschaftswissenschaften; <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften</i>
-                  <!-- <i>Kommission für Angelegenheiten des IMT; <br/>Prüfungsausschuss</i> -->
+                <div class="cv-item work" data-type="work">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
+                  <h4>Kulturreferent</h4>
+                  <p><a href="https://asta.upb.de" id="service-place">AStA Universität Paderborn <i class="fas fa-link"></i></a></p>
+                  <i>Gestaltung der Kultur an und um den Campus für die Studierenden der Universität Paderborn<br/><div class="spacer"></div>Unterstützung der Aktivenschaft</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
+                  <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
+                  <p></p>
+                  <i>Fakultätsrat der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften</i>
+                  <!-- <i>Kommission für Angelegenheiten des IMT; <br/>Prüfungsausschuss Wirtschaftsinformatik</i> -->
+                </div>
+                <div class="cv-item volunteer" data-type="volunteer">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
                   <h4>Gewähltes Mitglied</h4>
-                  <p><a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a></p>
+                  <p><a href="https://www.fsrwinfo.de" id="service-place">Fachschaftsrat Wirtschaftsinformatik <i class="fas fa-link"></i></a></p>
                 </div>
                 <div class="cv-item graduation" data-type="graduation">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Seit April 2022</div></div>
                   <h4>Studium</h4>
-                  <p><a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a></p>
+                  <p><a href="https://www.uni-paderborn.de" id="service-place">Universität Paderborn <i class="fas fa-link"></i></a></p>
                   <i>Wirtschaftsinformatik, Master of Science </i>
                 </div>
                 <div class="cv-item work" data-type="work">
@@ -244,26 +250,26 @@
                   <i>Eventorganisation rund um die Firmenkontaktmesse</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Oktober 2021 bis Oktober 2022</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Oktober 2021 bis Oktober 2022</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Kommissionen und Ausschüssen</small></h4>
                   <p></p>
-                  <i>Kommission für Angelegenheiten des IMT; <br/><div class="spacer"></div>Haushaltsausschuss des Studierendenparlaments (Stellv. Vorsitz); <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
+                  <i>Kommission für Angelegenheiten des IMT <br/><div class="spacer"></div>Haushaltsausschuss des Studierendenparlaments (Stellv. Vorsitz) <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
                 </div>
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit August 2020</div></div>
                   <h4>Werkstudent</h4>
-                  <p><a href="https://www.beckmann-partner.de" id="service-place">BECKMANN & PARTNER CONSULT <i class="fas fa-link"></i></a></p>
-                  <i>Konzeptionierung und Realisierung verschiedener interner Projekte. <br /> Full-Stack-Entwickler / DevOps-Engineer für RESTful Webservices und deren Architektur.</i>
+                  <p><a href="https://www.beckmann-partner.de" id="service-place">Beckmann & Partner Consult <i class="fas fa-link"></i></a></p>
+                  <i>Konzeptionierung und Realisierung interner Projekte. <br /><div class="spacer"></div> Full-Stack-Entwickler / DevOps-Engineer für RESTful Webservices und deren Architektur.</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
                   <h4>Aktives Mitglied</h4>
-                  <p><a href="https://www.fsrwinfo.de" id="service-place">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK <i class="fas fa-link"></i></a></p>
+                  <p><a href="https://www.fsrwinfo.de" id="service-place">Fachschaftsrat Wirtschaftsinformatik <i class="fas fa-link"></i></a></p>
                 </div>
                 <div class="cv-item graduation" data-type="graduation">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Oktober 2018 bis April 2022</div></div>
                   <h4>Studium</h4>
-                  <p><a href="https://www.uni-paderborn.de" id="service-place">UNIVERISITÄT PADERBORN <i class="fas fa-link"></i></a></p>
+                  <p><a href="https://www.uni-paderborn.de" id="service-place">Universität Paderborn <i class="fas fa-link"></i></a></p>
                   <i>Wirtschaftsinformatik, Bachelor of Science </i>
                 </div>
                 <div class="cv-item work" data-type="work">
@@ -273,21 +279,20 @@
                   <i>Verkäufer auf der Ladenfläche</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date"></div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date"></div></div>
                   <h4>Teilnahme</h4>
-                  <p><a href="https://www.pyddf.de" id="service-place">PYTHON SPRINT, DÜSSELDORF (PyDDF) <i class="fas fa-link"></i></a></p>
+                  <p><a href="https://www.pyddf.de" id="service-place">Pythn Sprints, Düsseldorf (PyDDF) <i class="fas fa-link"></i></a></p>
                   <i>und weitere Meetings</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fa fa-cogs fa-3x"></i></div><div class="service-date">2012 bis 2018</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">2012 bis 2018</div></div>
                   <h4>Tonmeister Assistent</h4>
-                  <p>GYMNASIUM SCHLOß HOLTE - STUKENBROCK</p>
-                  <i>Betreuung der Ton- und Lichttechnik bei diversen Schulveranstaltungen</i>
+                  <p>Gymnasium Schloß Holte - Stukenbrock</p>
                 </div>
                 <div class="cv-item graduation" data-type="graduation">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">2010 bis 2018</div></div>
                   <h4>Allgemeine Hochschulreife</h4>
-                  <p>GYMNASIUM SCHLOß HOLTE - STUKENBROCK</p>
+                  <p><a href="https://www.gymnasium-shs.de/" id="service-place"></a>Gymnasium Schloß Holte - Stukenbrock <i class="fas fa-link"></i></a></p>
                 </div>
               </div>
             </div>
