--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <div class="row career">
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
-                  <h4>Kulturreferent</h4>
+                  <h4>Referent für Kultur</h4>
                   <p><a href="https://asta.upb.de" id="service-place">AStA Universität Paderborn <i class="fas fa-link"></i></a></p>
                   <i>Gestaltung der Kultur an und um den Campus für die Studierenden der Universität Paderborn<br/><div class="spacer"></div>Unterstützung der Aktivenschaft</i>
                 </div>
@@ -232,8 +232,8 @@
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
                   <p></p>
-                  <i>Fakultätsrat der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften</i>
-                  <!-- <i>Kommission für Angelegenheiten des IMT; <br/>Prüfungsausschuss Wirtschaftsinformatik</i> -->
+                  <i>Fakultätsrat der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
+                  <!-- <i>Kommission für Angelegenheiten des IMT</i> -->
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
@@ -250,7 +250,7 @@
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Januar 2022</div></div>
                   <h4>Ressortleitung Events</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
-                  <i>Eventorganisation rund um die Firmenkontaktmesse</i>
+                  <i>Organisation von Events rund um die Firmenkontaktmesse</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Oktober 2021 bis Oktober 2022</div></div>
