update to Fontawesome6 and minor updates

--- a/impressum.html
+++ b/impressum.html
@@ -14,11 +14,10 @@
     <title>Dominik Höhr, Impressum</title>
 
     <!-- Additional CSS Files -->
-    <!-- FontAweSome5 -->
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
-    <link rel="stylesheet" href="assets/css/brands.min.css" />
-    <link rel="stylesheet" href="assets/css/regular.min.css" />
-    <link rel="stylesheet" href="assets/css/solid.min.css" />
+    <!-- FontAweSome6.2 -->
+    <link rel="stylesheet" href="assets/fontawesome/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="assets/fontawesome/css/brands.min.css" />
+    <link rel="stylesheet" href="assets/fontawesome/css/solid.min.css" />
 
     <link rel="stylesheet" href="assets/css/style.css" />
     
