--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     <title>Über mich, Dominik Höhr</title>
 
     <!-- Additional CSS Files -->
-    <!-- FontAweSome5 -->
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
-    <link rel="stylesheet" href="assets/css/brands.min.css" />
-    <!-- <link rel="stylesheet" href="assets/css/regular.min.css" /> -->
-    <link rel="stylesheet" href="assets/css/solid.min.css" />
+    <!-- FontAweSome6.2 -->
+    <link rel="stylesheet" href="assets/fontawesome/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="assets/fontawesome/css/brands.min.css" />
+    <link rel="stylesheet" href="assets/fontawesome/css/solid.min.css" />
 
     <link rel="stylesheet" href="assets/css/style.css" />
     
@@ -89,7 +88,7 @@
                         Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
                         Insbesondere interessiere ich mich für das DevOps-Engineering.<br /> 
                         <br />
-                        Aktuell studiere ich im 1.Masterstudium und arbeite als Werkstudent in der IT-Consulting-Branche.
+                        Aktuell studiere ich im 2. Semester des Master of Science Wirtschaftsinformatik und arbeite als Werkstudent in der IT-Consulting-Branche.
                       </p>
                     </div>
                   </div>
@@ -133,7 +132,7 @@
                       <h4>Frontend</h4>
                       <div class="skill-list">
                         <span title="HTML5"><i class="fab fa-html5"></i></span>
-                        <span title="CSS3"><i class="fab fa-css3"></i></span>
+                        <span title="CSS3, Sass"><i class="fab fa-css3"></i></span>
                         <span title="ReactJS"><i class="fab fa-react"></i></span>
                         <span title="JavaScript"><i class="fab fa-js"></i></span>
                       </div>
@@ -145,16 +144,17 @@
                       </div>
                       <h4>Entwicklungs- und Buildprozess</h4>
                       <div class="skill-list">
-                        <span title="git"><i class="fab fa-git"></i></span>
+                        <span title="git"><i class="fa-solid fa-code-branch"></i></span>
                         <span title="docker / docker compose"><i class="fab fa-docker"></i></span>
                         <span title="yarn"><i class="fab fa-yarn"></i></span>
                         <span title="Nginx"><i class="fas fa-server"></i></span>
                       </div>
                       <h4>Weitere</h4>
                       <div class="skill-list">
+                        <span title="Amazon Web Services (Inbs. Amazon Elastic und RDS)"><i class="fa-brands fa-aws"></i></span>
                         <span title="cli (shell und bash)"><i class="fa fa-terminal"></i></span>
-                        <span title="Microsoft Office 365"><i class="fab fa-microsoft"></i></span>
-                      </div><small>Insbesondere Sharepoint und Teams</small>
+                        <span title="Microsoft 365"><i class="fab fa-microsoft"></i><small style="position: absolute; width: 80px">Insbesondere Sharepoint und Teams</small></span>
+                      </div>
                     </figcaption>
                   </figure>
                 </div>
@@ -169,6 +169,7 @@
                       <div class="skill-list">
                         <span title="SCRUM"><i class="fas fa-tasks"></i></span>
                         <span title="Projektmanagement"><i class="fas fa-project-diagram"></i></span>
+                        <span title="Atlassian Jira Software"><i class="fa-brands fa-jira"></i></span>
                       </div>
                       <h4>Modellierung</h4>
                       <div class="skill-list">
@@ -179,7 +180,7 @@
                       <h4>Tools</h4>
                       <div class="skill-list">
                         <span title="SAP"><i class="fab">SAP</i></span>
-                        <span title="Data Science, CRISP-DM"><i class="fab fa-r-project"></i></span>
+                        <span title="Data Science, CRISP-DM, R"><i class="fab fa-r-project"></i></span>
                       </div>
                       <h4>Weitere</h4>
                       <div class="skill-list">
@@ -232,8 +233,7 @@
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
                   <p></p>
-                  <i>Fakultätsrat der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
-                  <!-- <i>Kommission für Angelegenheiten des IMT</i> -->
+                  <i>Fakultätsrat der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik<div class="spacer"></div>Kommission für Angelegenheiten des IMT</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
