--- a/links/index.html
+++ b/links/index.html
@@ -14,10 +14,10 @@
     <meta name="description" content="SocialMedia and Contact Links for Dominik Höhr" />
     <meta name="author" content="hrdominik" />
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="../assets/css/fontawesome.min.css" />
-    <link rel="stylesheet" href="../assets/css/brands.min.css" />
-    <!-- <link rel="stylesheet" href="../assets/css/regular.min.css" /> -->
-    <link rel="stylesheet" href="../assets/css/solid.min.css" />
+    <!-- FontAweSome6.2 -->
+    <link rel="stylesheet" href="../assets/fontawesome/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="../assets/fontawesome/css/brands.min.css" />
+    <link rel="stylesheet" href="../assets/fontawesome/css/solid.min.css" />
 
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="../assets/css/linktree.css">
