--- a/links/index.html
+++ b/links/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="row justify-content-center align-self-center mt-3 text-center">
-            <div class="col-3 link-button"><a id="home" href="https://dominik.hoehr.net"> &laquo; Zurück zur Webseite</a></div>
+            <div class="col-8 col-lg-5 link-button"><a id="home" href="https://dominik.hoehr.net"> &laquo; Zurück zur Webseite</a></div>
         </div>
         <br />
 
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="row justify-content-center align-self-center mt-3 text-center" id="worklinks">
-            <a class="link" href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin fa-2x"></i><label>LinkedIn</label><div></div></a>
+            <a class="link" href="https://de.linkedin.com/in/dominik-hoehr"><i class="fab fa-linkedin fa-2x"></i><label>LinkedIn</label><div></div></a>
             <a class="link" href="https://github.com/hrdominik"><i class="fab fa-github fa-2x"></i><label>GitHub</label><div></div></a>
             <br />
             <a class="link" href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope fa-2x"></i><label>E-Mail</label><div></div></a>
